--- a/generator/index.html
+++ b/generator/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Custom Avatar Hint Preview</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
     <body>
