--- a/generator/index.html
+++ b/generator/index.html
@@ -21,7 +21,7 @@
             <p>Preview:</p>
             <div class="avatar">
                 <img
-                    src="https://i.imgur.com/s6UfSS5.jpg?1">
+                    src="https://avatars0.githubusercontent.com/u/58920747?s=400&v=4">
                 <div class="hint">
                     <span>memes</span>
                 </div>
